--- a/g/go/goo/good-tutorials.com.html
+++ b/g/go/goo/good-tutorials.com.html
@@ -1,14 +1,14 @@
-<!--The following is the downloaded HTML source of the good-tutorials.com privacy policy that was archived on 2005-12-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051221043626id_/http%3A//good-tutorials.com/privacy.jsp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the good-tutorials.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615014702id_/http%3A//good-tutorials.com/privacy.jsp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>Good-Tutorials.com - Privacy Policy</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <meta name="keywords" content="photoshop tutorials, tutorials, photoshop, adobe, adobe photoshop tutorials, online learning">
-<meta name="description" content="Good-Tutorials.com lists 9197 Photoshop tutorials.">
+<meta name="description" content="Good-Tutorials.com lists 10550 Photoshop tutorials.">
 <link rel="stylesheet" type="text/css" media="all" href="/css/master.css">
 <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
-<link href="/rss.xml" rel="alternate" type="application/rss+xml" title="Good-Tutorials.com: Newest Tutorials"> 
+<link href="http://feeds.feedburner.com/good-tutorials-new" rel="alternate" type="application/rss+xml" title="Good-Tutorials.com: Newest Tutorials"> 
 <!-- FASTCLICK.COM POP-UNDER CODE v1.8 for good-tutorials.com (12 hour) -->
 <script language="javascript"><!--                                 
 var dc=document; var date_ob=new Date();
@@ -18,7 +18,7 @@ dc.write('<scr'+'ipt language="javascript" src="http://media.fastclick.net');
 dc.write('/w/pop.cgi?sid=11290&m=2&tp=2&v=1.8&c='+bust+'"></scr'+'ipt>');
 date_ob.setTime(date_ob.getTime()+43200000);
 dc.cookie='he=llo; path=/; expires='+ date_ob.toGMTString();} // -->
-</script><script language="javascript" src="http://media.fastclick.net/w/pop.cgi?sid=11290&amp;m=2&amp;tp=2&amp;v=1.8&amp;c=29"></script>                                                          
+</script>                                                          
 <!-- FASTCLICK.COM POP-UNDER CODE v1.8 for good-tutorials.com -->
 </head>
 
@@ -26,17 +26,7 @@ dc.cookie='he=llo; path=/; expires='+ date_ob.toGMTString();} // -->
 <div id="header">
 	
 <div id="leaderboard">
-<!-- TF 728x90 JScript VAR code -->
-<script language="javascript"><!--
-document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.ad?site=GoodTutorials&adSpace=ROS&size=728x90&type=var&requestID='+((new Date()).getTime() % 2147483648) + Math.random()+'"></scr'+'ipt>');
-//-->
-</script><script language="javascript" src="http://a.tribalfusion.com/j.ad?site=GoodTutorials&amp;adSpace=ROS&amp;size=728x90&amp;type=var&amp;requestID=20496483560.8037057367358804"></script>
-<noscript>
-   <a href="http://a.tribalfusion.com/i.click?site=GoodTutorials&adSpace=ROS&size=728x90&requestID=688044971" target=_blank>
-   <img src="http://a.tribalfusion.com/i.ad?site=GoodTutorials&adSpace=ROS&size=728x90&requestID=688044971" 
-                  width=728 height=90 border=0 alt="Click Here"></a>
-</noscript>
-<!-- TF 728x90 JScript VAR code -->
+<iframe src="/ads/728t.htm" width="728" height="90" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no" allowtransparency="true"></iframe>
 </div>
 <div id="logospan">
 	<table width="100%" border="0" cellspacing="0" cellpadding="0">
@@ -72,8 +62,6 @@ document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.
 	  </tr>
 	</tbody></table>
 </div>
-
-
 	
 	<div class="navigation"><a href="/">Good-Tutorials.com</a> » <a href="/privacy.jsp">Privacy Policy</a></div>
 </div>
@@ -127,134 +115,100 @@ document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.
 	<li><a href="http://www.spoono.com/">Spoono - PS/PHP Tuts</a></li>
 	<li><a href="http://www.bbspot.com/">Tech Humor</a></li>
 	<li><a href="http://www.free-codecs.com/">Free-Codecs.com</a></li>
-	<li><a href="http://www.photoshopsupport.com/">Photoshop Tutorials</a></li>
-	<li><a href="http://www.1shoppingcart.com/app/adtrack.asp?AdID=150692">Photoshop Video Tutorials</a></li>
-	<li><a href="http://www.coolhomepages.com">Web Site Design Gallery</a></li>
+	<li><a href="http://www.coolhomepages.com">CoolHomepages.com</a></li>
 	<li><a href="http://www.freelancedesigners.com/" title="freelance">Graphic Designers</a></li>
+	<li><a href="http://www.mypimpspace.com">MySpace Codes</a></li>
+	<li><a href="http://www.psdtuts.com">Photoshop Effects</a></li>
 </ul>
 <div class="menuheader">Advertisements</div>
 <ul class="menu">
-	<li><a href="http://www.reallygooddomains.com">Website design</a></li>
 	<li><a href="http://www.design-programs.com">Graphic design schools</a></li>
 	<li><a href="http://www.progroupracing.com.au">Horse Racing</a></li>
-	<li><a href="http://www.allslots.com/online-casinos.php">Online Casino Tutorials</a></li>
 	<li><a href="http://www.canmag.com">Movie Trailers</a></li>
 	<li><a href="http://www.opticsplus.net">Night Vision Equipment</a></li>
 	<li><a href="http://www.atncorp.com">Night Vision Scope</a></li>
-	<li><a href="http://www.livelistings.co.uk/">TV and Web Listings</a></li>
-	<li><a href="http://www.bigstockphoto.com">Stock Photo Search</a></li>
-	<li><a href="http://www.carleasingdirectory.co.uk/">Car Leasing</a></li>
-	<li><a href="http://www.templatemonster.com/photoshop-templates.php">Photoshop Templates</a></li>
-	<li><a href="http://www.verticalresponse.com/landing/500/?good-tutorials/nov05">FREE Email Marketing</a></li>
-	<li><a href="http://www.greycobra.com">Photoshop Tutorials</a></li>
-</ul>
+	<li><a href="http://www.bigstockphoto.com">Low Cost Stock Photos</a></li>
+	<li><a href="http://www.1shoppingcart.com/app/adtrack.asp?AdID=150692">Photoshop Video Tutorials</a></li>
+	<li><a href="http://www.verticalresponse.com/landing/500/?good-tutorials/mar06">FREE Email Marketing</a></li>
+	<li><a href="http://www.flagamers.com">Flash Games</a></li>
+	<li><a href="http://www.myspaceclipart.com">MySpace Layouts</a></li>
+	<li><a href="http://www.photoshoptalent.com">expose your PS talent</a></li>
+	<li><a href="http://www.gotomycodes.com">Premade MySpace Layouts</a>
+</li></ul>
 <br>
-<div style="text-align: center; background-color: #ddb; width: 100%; border-top: 1px solid #997; border-bottom: 1px solid #997;">
-<script language="JavaScript">
-<!--
-ctxt_ad_partner = "2059439458";
-ctxt_ad_section = "";
-ctxt_ad_bg = "";
-ctxt_ad_width = 120;
-ctxt_ad_height = 600;
-ctxt_ad_bc = "333333";
-ctxt_ad_cc = "333333";
-ctxt_ad_lc = "FFCC00";
-ctxt_ad_tc = "FFFFFF";
-ctxt_ad_uc = "DCDCDC";
-// -->
-</script>
-<script language="JavaScript" src="http://ypn-js.overture.com/partner/js/ypn.js">
-</script>
+<div style="text-align: center; background-color: #999977; width: 100%; border-top: 1px solid #ddb; border-bottom: 1px solid #ddb;">
+ <iframe src="/ads/120y.htm" width="120" height="600" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no" allowtransparency="true"></iframe>
 </div>
 	</div>
 
 
-<div id="right">
-  <div class="blogheading"><h2>Latest Blog Posts &nbsp;&nbsp; <a href="/rss.jsp"><img src="/images/rss.png" title="Get the latest tutorials automagically using RSS" alt="RSS button"></a></h2>
+
+
+  <div id="right"><div class="blogheading"><h2>Latest Blog Posts &nbsp;&nbsp; <a href="/rss.jsp"><img src="/images/rss.png" title="Get the latest tutorials automagically using RSS" alt="RSS button"></a></h2>
 	    <br>
 
-		<strong><a href="/blog/62/looking-ahead">Looking Ahead</a></strong> (December 19, 2005)<br>
-		So what's in store for me, you, and for Good-Tutorials? <em>(<a href="/blog/62/looking-ahead">read more</a>) (18 comments)</em><br>
+		<strong><a href="/blog/119/thirty-thousand">Thirty Thousand</a></strong> (June 13, 2006)<br>
+		So I've seen a lot of tutorials in my time. <em>(<a href="/blog/119/thirty-thousand">read more</a>)</em><br>
 
-		<strong><a href="/blog/61/heh-ive-been-spammed">Heh, I've been Spammed</a></strong> (December 15, 2005)<br>
-		I was puzzled just now when I saw the first piece of spam occur after I had implemented the new f... <em>(<a href="/blog/61/heh-ive-been-spammed">read more</a>) (32 comments)</em><br>
+		<strong><a href="/blog/118/why-hello-there">Why, Hello There!</a></strong> (June 13, 2006)<br>
+		Long time no blog. <em>(<a href="/blog/118/why-hello-there">read more</a>)</em><br>
 
-		<strong><a href="/blog/60/holiday-themed-tutorials">Holiday-Themed Tutorials</a></strong> (December 15, 2005)<br>
-		Just a quick note to your writers out there- if you're trying to think of a solid idea for some t... <em>(<a href="/blog/60/holiday-themed-tutorials">read more</a>) (5 comments)</em><br>
+		<strong><a href="/blog/117/mysql-6422-zach-1">MySQL: 6,422; Zach: 1</a></strong> (June 02, 2006)<br>
+		Luckily my one point was all that mattered to secure the win. Good-Tutorials is up and speedy again. <em>(<a href="/blog/117/mysql-6422-zach-1">read more</a>)</em><br>
 
-		<strong><a href="/blog/59/trillian-to-adium-logfile-conversion">Trillian to Adium Logfile Conversion</a></strong> (December 11, 2005)<br>
-		In this riveting post, I decide to release some code that converts Trillian logfiles to Adium's format. <em>(<a href="/blog/59/trillian-to-adium-logfile-conversion">read more</a>) (12 comments)</em><br>
+		<strong><a href="/blog/116/going-down">Going Down</a></strong> (May 30, 2006)<br>
+		There should be an hour or two of downtime tonight as a second server is added. (Update x4) <em>(<a href="/blog/116/going-down">read more</a>)</em><br>
 
-		<strong><a href="/blog/58/taking-a-bit-of-a-break">Taking a Bit of a Break</a></strong> (December 10, 2005)<br>
-		Hope none of you are anticipating any groundbreaking things debuting on Good-Tutorials in the nex... <em>(<a href="/blog/58/taking-a-bit-of-a-break">read more</a>) (20 comments)</em><br>
+		<strong><a href="/blog/115/over-the-weekend">Over the Weekend</a></strong> (May 29, 2006)<br>
+		Nah, the weekend's mystery isn't much of a mystery. <em>(<a href="/blog/115/over-the-weekend">read more</a>)</em><br>
 
   </div>
 	<div class="skyscraper">
-		<script language="javascript"><!--
-		document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.ad?site=GoodTutorials&adSpace=ROS&size=160x600&type=var&requestID='+((new Date()).getTime() % 2147483648) + Math.random()+'"></scr'+'ipt>');
-		//-->
-		</script><script language="javascript" src="http://a.tribalfusion.com/j.ad?site=GoodTutorials&amp;adSpace=ROS&amp;size=160x600&amp;type=var&amp;requestID=20496484000.5898173142616403"></script>
-		<noscript>
-		<a href="http://a.tribalfusion.com/i.click?site=GoodTutorials&adSpace=ROS&size=160x600&requestID=1412534525" target=_blank>
-		<img src="http://a.tribalfusion.com/i.ad?site=GoodTutorials&adSpace=ROS&size=160x600&requestID=1412534525" 
-					  width=160 height=600 border=0 alt="Click Here"></a>
-		</noscript>
+	 <iframe src="/ads/160t.htm" width="120" height="600" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no" allowtransparency="true"></iframe>
 	</div>
   <div class="blogheading"><h2>Latest Blog Comments</h2>
 	    <br>
 
-		<strong>tanz</strong> on <a href="/blog/62/looking-ahead#comment-1160">Looking Ahead</a><br>
+		<strong>Greg</strong> on <a href="/blog/119/thirty-thousand#comment-4334">Thirty Thousand</a><br>
 		
-			&nbsp;&nbsp;Well..... you can always design it with pen and paper..........<br>
+			&nbsp;&nbsp;I have to admire the fact you did all of that on your own, r...<br>
 		
-
-		<strong>Zach Holman</strong> on <a href="/blog/62/looking-ahead#comment-1159">Looking Ahead</a><br>
+		<strong>Greg</strong> on <a href="/blog/118/why-hello-there#comment-4333">Why, Hello There!</a><br>
 		
-			&nbsp;&nbsp;Sigh, this is too sad. Getting ready to head home for three ...<br>
+			&nbsp;&nbsp;You can bet SKETCHi is in that regular comments bit ;)<br>
 		
-
-		<strong>PrimeMatters</strong> on <a href="/blog/62/looking-ahead#comment-1158">Looking Ahead</a><br>
+		<strong>Zach Holman</strong> on <a href="/blog/119/thirty-thousand#comment-4332">Thirty Thousand</a><br>
 		
-			&nbsp;&nbsp;Always moving forward, good stuff =)<br>
+			&nbsp;&nbsp;That doesn't really work though. For example, I don't want t...<br>
 		
-
-		<strong>Dan</strong> on <a href="/blog/62/looking-ahead#comment-1157">Looking Ahead</a><br>
+		<strong>lethalwire</strong> on <a href="/blog/119/thirty-thousand#comment-4330">Thirty Thousand</a><br>
 		
-			&nbsp;&nbsp;lol, It sounds like a major thing he is doing, I think we ma...<br>
+			&nbsp;&nbsp;30,000 Tutorials is quite a bit. Though, many tutorials have...<br>
 		
-
-		<strong>tanz</strong> on <a href="/blog/62/looking-ahead#comment-1156">Looking Ahead</a><br>
+		<strong>Zach Holman</strong> on <a href="/blog/119/thirty-thousand#comment-4325">Thirty Thousand</a><br>
 		
-			&nbsp;&nbsp;Ok then Zach, I will shut up as long as you tell us what it ...<br>
+			&nbsp;&nbsp;Wow, what a thriller Germany vs. Poland was. That was a fun ...<br>
 		
-
-		<strong>Zach Holman</strong> on <a href="/blog/62/looking-ahead#comment-1155">Looking Ahead</a><br>
+		<strong>Zach Holman</strong> on <a href="/blog/119/thirty-thousand#comment-4313">Thirty Thousand</a><br>
 		
-			&nbsp;&nbsp;Ha. :) Right now I do want to keep it secret, mostly because...<br>
+			&nbsp;&nbsp;Ryan- that's a fairly reasonable estimate. ;)<br>
 		
-
-		<strong>tanz</strong> on <a href="/blog/62/looking-ahead#comment-1154">Looking Ahead</a><br>
+		<strong>Zach Holman</strong> on <a href="/blog/118/why-hello-there#comment-4311">Why, Hello There!</a><br>
 		
-			&nbsp;&nbsp;Is there any chance that you want to share this "very good i...<br>
+			&nbsp;&nbsp;The timeouts are due to a bit of a complex issue.<br>
 		
-
-		<strong>Zach Holman</strong> on <a href="/blog/62/looking-ahead#comment-1153">Looking Ahead</a><br>
+		<strong>Nour El Saidi</strong> on <a href="/blog/118/why-hello-there#comment-4309">Why, Hello There!</a><br>
 		
-			&nbsp;&nbsp;tanz- well, nothing is coded yet. I have a very good idea of...<br>
+			&nbsp;&nbsp;Ij just like to ask, were those timeouts (503 errors) on the...<br>
 		
-
-		<strong>Nour El Saidi</strong> on <a href="/blog/62/looking-ahead#comment-1152">Looking Ahead</a><br>
+		<strong>wordedwrong.com</strong> on <a href="/blog/119/thirty-thousand#comment-4308">Thirty Thousand</a><br>
 		
-			&nbsp;&nbsp;Good Stuff.
-Getting better and better, Perhaps you can make...<br>
+			&nbsp;&nbsp;Wow indeed, thats A L O T !.<br>
 		
-
-		<strong>tanz</strong> on <a href="/blog/62/looking-ahead#comment-1151">Looking Ahead</a><br>
+		<strong>Ryan</strong> on <a href="/blog/119/thirty-thousand#comment-4303">Thirty Thousand</a><br>
 		
-			&nbsp;&nbsp;Without giving too much away would you like to inform us.......<br>
+			&nbsp;&nbsp;Wow, and 25,000 have something to do with sigs. ;)<br>
 		
-
   </div>
 </div>
   <div id="center">
@@ -292,7 +246,13 @@ Getting better and better, Perhaps you can make...<br>
 
 <div id="footer">
 	<div class="navigation"><a href="/">Good-Tutorials.com</a> » <a href="/privacy.jsp">Privacy Policy</a></div>
-	<p>Copyright 2002-2005, Zach Holman. <a href="/privacy.jsp">Privacy Policy</a>.</p>
+	<p>Copyright 2002-2006, Zach Holman. <a href="/privacy.jsp">Privacy Policy</a>.</p>
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-251125-1";
+urchinTracker();
+</script>
 </div>
 
 
