--- a/m/mo/mor/mortgageloan.com.html
+++ b/m/mo/mor/mortgageloan.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the mortgageloan.com privacy policy that was archived on 2005-12-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051214111800id_/http%3A//www.mortgageloan.com/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mortgageloan.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615014703id_/http%3A//www.mortgageloan.com/privacy.shtml) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <style type="text/css">
@@ -7,16 +7,20 @@
 </style>
 <title>Mortgage Loan</title>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<meta name="title" content="Mortgage Loan">
 <meta name="keywords" content="">
 <meta name="description" content="">
-<script language="Javascript" src="/javascript/funcs.js" type="text/javascript">
-</script>
+<!--<script language="JavaScript" src="/javascript/simpleAjax.js"></script>-->
+<script language="Javascript" src="/javascript/funcs.js" type="text/javascript"></script>
+<script type="text/javascript" src="https://www.data3001.com/sr.js?a=1572&amp;i=730"></script>
+<script type="text/javascript" src="https://www.data3001.com/js/forms/us_debt_forms.js"></script>
+<script type="text/javascript" src="https://www.data3001.com/js/forms/us_forms.js"></script>
 
 <script language="javascript">
-	function goAway()
+	function goAway(select)
 	{
-		if (document.ddForm.ddSelect.value != '')
-			location.href = document.ddForm.ddSelect.value;
+			if (select.value != '')
+			location.href = select.value;
 	}
 	
 	function showPop(u,w,h)
@@ -31,15 +35,64 @@
 	}
 	// -->
 </script>
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+<!--<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
 <script type="text/javascript">
 _uacct = "UA-32189-1";
 urchinTracker();
-</script>
+</script>-->
 
 </head>
-<body>
+<body onload="fetchGeoState('geoDiv', '127.0.0.1', document.referrer );
+setGeoFormState('PROP_ST', '127.0.0.1', document.referrer);">
+
+<!-- SiteCatalyst code version: H.2.
+Copyright 1997-2005 Omniture, Inc. More info available at
+http://www.omniture.com -->
+<script language="JavaScript" src="/javascript/s_code.js"></script><img name="s_i_webguidepartnermortgageloanprod" height="1" width="1" border="0" alt="" src="https://.mortgageloan.com/b/ss/webguidepartnermortgageloanprod/1/H.2-pdv-2/s37133848420410?[AQB]&amp;ndh=1&amp;t=30/0/2020%2017%3A48%3A47%204%200&amp;ce=UTF-8&amp;ns=webguidepartner&amp;pageName=/privacy.shtml&amp;g=https%3A//web.archive.org/web/20060615014703id_/http%253A//www.mortgageloan.com/privacy.shtml&amp;cc=USD&amp;c1=textpage&amp;h1=privacy.shtml&amp;s=800x600&amp;c=24&amp;j=1.3&amp;v=N&amp;k=Y&amp;bw=1366&amp;bh=768&amp;[AQE]">
+<script language="JavaScript"><!--
+/* You may give each page an identifying name, server, and channel on
+the next lines. */
+
+s.pageName="/privacy.shtml"
+s.server=""
+s.channel=""
+s.pageType=""
+s.prop1="textpage"
+s.prop2=""
+s.prop3=""
+s.prop4=""
+s.prop5=""
+s.prop6=""
+s.prop7=""
+s.prop8=""
+s.prop9=""
+s.prop10=""
+/* E-commerce Variables */
+s.campaign=""
+s.state=""
+s.zip=""
+s.events=""
+s.products=""
+s.purchaseID=""
+s.eVar1=""
+s.eVar2=""
+s.eVar3=""
+s.eVar4=""
+s.eVar5=""
+s.eVar6=""
+s.eVar7=""
+s.eVar8=""
+s.eVar9=""
+s.eVar10=""
+/* Hierarchy Variables */
+s.hier1="privacy.shtml"
+/************* DO NOT ALTER ANYTHING BELOW THIS LINE ! **************/
+var s_code=s.t();if(s_code)document.write(s_code)//--></script>
+<script language="JavaScript"><!--
+if(navigator.appVersion.indexOf('MSIE')>=0)document.write(unescape('%3C')+'\!-'+'-')
+//--></script><!--/DO NOT REMOVE/-->
+<!-- End SiteCatalyst code version: H.2. -->
 <div id="right">
 <b>Mortgage By State</b>
 <p>
@@ -69,12 +122,30 @@ urchinTracker();
 <a href="/prequalify-for-a-mortgage">Prequalify for a mortgage</a><br>
 <a href="/commercial/">Commercial mortgage</a><br>
 <a href="/calculators/payoff.cgi">Early Payoff Calculator</a><br>
+<a href="/debt-consolidation">Debt Consolidation</a><br>
+<a href="/articles">Article Archive</a><br>
+</p>
+<b>Latest news</b>
+<p>		
+<a href="/home-improvement-heloc-or-home-equity-loan">Home Improvement Time - HELOC or Home Equity Loan?</a><br>
+<a href="/2-percent-refinance-rule">The 2 Percent Refinance Rule - Fact or Fiction?</a><br>
+<a href="/mortgage-refinance-tax-deductions-points">Mortgage Refinance - Tax Deductions and Points</a><br>
+<a href="/pay-off-mortgage-with-home-equity-loan">Pay off Your Mortgage with Home Equity Loan</a><br>
+<a href="/best-time-to-refinance">Best Time to Refinance</a><br>
+<a href="/mortgage-rate-quote">Mortgage Rate Quote</a><br>
+<a href="/become-a-mortgage-broker-565">Become A Mortgage Broker</a><br>
+<a href="/refinance-basics">Refinance Basics</a><br>
+<a href="/afford-mortgage">Afford Mortgage</a><br>
+<a href="/online-mortgage-quote">Online Mortgage Quote</a><br>
+<a href="/financing-2nd-home-by-home-equity-loan">Financing a Second Home? Use a Home Equity Loan</a><br>
+<a href="/cashout-refinancing-to-pay-for-college-560">Cash-out Refinancing to Pay For College</a><br>
+
 </p>
 </div>
 <div id="top">
 <div id="logoAndSlogan">
-<div id="logo"><a href="/"><img src="/images/MortgageLoan/logoLeft.gif" width="44" height="51" alt=""></a><a href="/"><img src="/images/MortgageLoan/logoRight.gif" width="254" height="51" alt=""></a></div>
-<div id="slogan">Mortgage Loan Online Since 1995</div>
+<div id="logo"><a href="/"><img src="/images/MortgageLoan/logo.gif" width="254" height="51" alt=""></a></div>
+<div id="slogan2">Online Since 1995</div>
 <div class="clear"></div>
 </div>
 <div id="header">
@@ -82,10 +153,10 @@ urchinTracker();
 <div id="nav">
 <ul>
 <li class="on"><div><a href="/">Mortgage</a></div></li>
-<li><div><a href="/home-equity-loans">Home Equity</a></div></li>
-<li><div><a href="/calculators/">Calculators</a></div></li>
 <li><div><a href="/refinance-mortgage">Refinance</a></div></li>
+<li><div><a href="/home-equity-loans">Home Equity</a></div></li>
 <li><div><a href="/Rates/">Mortgage Rates</a></div></li>
+<li><div><a href="/calculators/">Calculators</a></div></li>
 <li><div><a href="/Mortgage/">Brokers &amp; Lenders</a></div></li>
 <!--<li><div><a href="/state">By State</a></div></li>-->
 <li><div><a href="/Quotes">Free Quotes</a></div></li>
@@ -106,7 +177,7 @@ urchinTracker();
 </div>
 <div id="select">
 <form name="ddForm">
-<select onchange="goAway();" name="ddSelect">
+<select onchange="goAway(this);" name="ddSelect">
 <option value="">More Categories</option>
 			
 <option class="optgroup" value="/Mortgage/">Mortgage</option>
@@ -132,9 +203,10 @@ urchinTracker();
 			
 <option class="optgroup" value="/home-equity-loans">Home equity loans</option>
 <option value="/home-equity-line-of-credit">Home equity line of credit</option>
-<option value="/debt-consolidation">Consolidate loans</option>
+<option value="/debt-consolidation">Debt Consolidation</option>
 <option value="/home-improvement-loan">Home improvement loan</option>
 <option value="/home-equity-cash-out">Home equity cash out</option>
+<option value="/debt-management">Debt Management</option>
 		
 			
 <option class="optgroup" value="/calculators/">Mortgage calculator</option>
@@ -156,7 +228,74 @@ urchinTracker();
 			
 <option class="optgroup" value="/Quotes">Quotes</option>
 		
-<option value="/search">Search</option>
+<option value="/advertise">Advertise</option>
+<option value="/thank-you-rf">Thank You Refinance</option>
+<option value="/thank-you-he">Thank You Home Equity</option>
+<option value="/thank-you-dc">Thank You Debt C</option>
+<option value="/thank-you-nh">Thank You New Home</option>
+<option value="/partner">Link to us</option>
+			
+<option class="optgroup" value="/articles">ArticleListing</option>
+<option value="/mortgage-articles">Mortgage Articles</option>
+<option value="/refinance-articles">Refinance Articles</option>
+<option value="/second-mortgage-loans-for-home-improvements-507">Second Mortgage Loans for Home...</option>
+<option value="/refinancing-a-look-at-your-options-509">Refinancing - A Look at Your...</option>
+<option value="/debt-consolidation-borrowing-against-home-equity-to-pay-off-debts-510">Debt Consolidation - Borrowing...</option>
+<option value="/refinancing-tips-five-steps">Refinancing Tips - Five Steps to...</option>
+<option value="/financing-a-second-home-with-a-second-mortgage-loan-512">Financing a Second Home with a...</option>
+<option value="/the-hidden-costs-of-mortgage-refinancing-513">The Hidden Costs of Mortgage...</option>
+<option value="/mortgage-refinance-and-taxes-514">Mortgage Refinance and Taxes</option>
+<option value="/home-equity-loans-vs-second-mortgages-515">Home Equity Loans versus Second...</option>
+<option value="/emergency-fund-home-equity-line-of-credit">No Emergency Fund? Try a Home...</option>
+<option value="/mortgage-refinance-reduce-term">Mortgage Refinance to Reduce the...</option>
+<option value="/refinance-your-mortgage-build-credit-rating">Refinance Your Mortgage and...</option>
+<option value="/mortgage-loans">Mortgage Loans</option>
+<option value="/2nd-mortgage">2nd mortgages are specific to...</option>
+<option value="/home-loans">Home Loans</option>
+<option value="/mortgage-interest-rates">Mortgage Interest Rates</option>
+<option value="/home-mortgage-refinance">Home Mortgage Refinance</option>
+<option value="/examining-home-equity-loan-rates-526">Examining home equity loan rates</option>
+<option value="/mortgage-lenders">Mortgage Lenders</option>
+<option value="/mortgage-companies">Mortgage Companies</option>
+<option value="/second-mortgage-clarity-please">Second Mortgage - Some clarity...</option>
+<option value="/bad-credit-refinance">Bad Credit, an opportunity...</option>
+<option value="/heloc-articles">HELOC Articles</option>
+<option value="/debt-consolidation-articles">Debt Consoldation Articles</option>
+<option value="/mortgage-rates-articles">Mortgage Rates Articles</option>
+<option value="/second-mortgage-articles">Second Mortgage Articles</option>
+<option value="/bad-credit-mortgage-articles">Bad Credit Mortgage Articles</option>
+<option value="/mortgage-company-articles">Mortgage Company Articles</option>
+<option value="/refinance-your-ARM">Time to Refinance Your...</option>
+<option value="/heloc-to-reduce-debt">Using a Home Equity Line of...</option>
+<option value="/pros-cons-second-mortgages-544">Pros and Cons of Second Mortgages</option>
+<option value="/home-equity-line-of-credit-college-tuition">Using a Home Equity Line of...</option>
+<option value="/quick-mortgage-tips-to-keep-your-sanity">Quick Mortgage Tips - Five Tips...</option>
+<option value="/refinance-home-mortgage">Should I refinance my home...</option>
+<option value="/college-tuition-2nd-mortgage">College Tuition Challenges? Try...</option>
+<option value="/refinancing-after-a-bankruptcy-550">Refinancing after a Bankruptcy</option>
+<option value="/mortgage-refinancing-points">Mortgage Refinancing - How Many...</option>
+<option value="/home-equity-line-of-credit-borrow-how-much">Home Equity Line of Credit - How...</option>
+<option value="/online-refinance">Online Refinance</option>
+<option value="/how-does-a-home-mortgage-work-554">How does a Home Mortgage Work?</option>
+<option value="/mortgage-term-whats-the-best-for-you-555">Mortgage Term - What’s the...</option>
+<option value="/tips-for-cutting-mortgage-refinancing-costs">Refinancing Your Mortgage? Tips...</option>
+<option value="/versatility-of-helocs">Versatility of HELOCs</option>
+<option value="/second-mortgage-to-acquire-investment-property">Second Mortgage to Acquire...</option>
+<option value="/avoid-high-jumbo-rates-with-second-mortgage">Avoid High Jumbo Loan Rates with...</option>
+<option value="/cashout-refinancing-to-pay-for-college-560">Cash-out Refinancing to Pay For...</option>
+<option value="/financing-2nd-home-by-home-equity-loan">Financing a Second Home? Use a...</option>
+<option value="/online-mortgage-quote">Online Mortgage Quote</option>
+<option value="/afford-mortgage">Afford Mortgage</option>
+<option value="/refinance-basics">Refinance Basics</option>
+<option value="/become-a-mortgage-broker-565">Become A Mortgage Broker</option>
+<option value="/mortgage-rate-quote">Mortgage Rate Quote</option>
+<option value="/best-time-to-refinance">Best Time to Refinance</option>
+<option value="/pay-off-mortgage-with-home-equity-loan">Pay off Your Mortgage with Home...</option>
+<option value="/mortgage-refinance-tax-deductions-points">Mortgage Refinance - Tax...</option>
+<option value="/2-percent-refinance-rule">The 2 Percent Refinance Rule...</option>
+<option value="/home-improvement-heloc-or-home-equity-loan">Home Improvement Time - HELOC or...</option>
+		
+<option value="/thank-you-dm">Thank You Debt Management</option>
 			
 <option class="optgroup" value="/Rates/">Mortgage Rates</option>
 <option value="/Rates/Alabama/">Alabama</option>
@@ -244,8 +383,8 @@ Children must always be guided and supervised when they are accessing online inf
 We may update the content of this policy statement at any time. Your feedbacks are always welcomed.	
 <div id="footTop"></div>
 <div id="foot">
-<p>All Rights Reserved 1995-2005 MortgageLoan.com</p>
-<p><a href="/about.shtml">About MortgageLoan</a> | <a href="/privacy.shtml">Privacy</a> | <a href="/email">Contact</a> | <a href="/legal.shtml">Legal</a> | <a href="/advertise">Advertise</a> | <a href="/signup">Broker Sign Up</a> | <a href="/mortgage-glossary">Glossary</a></p>
+<p>All Rights Reserved 1995-2006 MortgageLoan.com</p>
+<p><a href="/about.shtml">About MortgageLoan</a> | <a href="/privacy.shtml">Privacy</a> | <a href="/email">Contact</a> | <a href="/legal.shtml">Legal</a> | <a href="/signup">Broker Sign Up</a> | <a href="/mortgage-glossary">Glossary</a></p>
 </div>
 <div id="footBottom"></div>
 </div>
