--- a/t/th/the/theinsider.com.html
+++ b/t/th/the/theinsider.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the theinsider.com privacy policy that was archived on 2005-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051231163328id_/http%3A//www.theinsider.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the theinsider.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615015619id_/http%3A//www.theinsider.com/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//IETF//DTD HTML//EN"><html><head>
 <meta http-equiv="expires" content="Thu, 30 Dec 2002 120000 GMT">
@@ -74,7 +74,7 @@ rnum=Math.round(Math.random() * 100000);
 
 document.write('<scr'+'ipt src="http://www.burstnet.com/cgi-bin/ads/ad1591a.cgi/v=2.0S/sz=468x60A|728x90A/'+rnum+'/RETURN-CODE/JS/"></scr'+'ipt>');
 
-</script><script src="http://www.burstnet.com/cgi-bin/ads/ad1591a.cgi/v=2.0S/sz=468x60A|728x90A/77080/RETURN-CODE/JS/"></script><noscript><a
+</script><script src="http://www.burstnet.com/cgi-bin/ads/ad1591a.cgi/v=2.0S/sz=468x60A|728x90A/51404/RETURN-CODE/JS/"></script><noscript><a
 href="http://www.burstnet.com/ads/ad1591a-map.cgi/ns/v=2.0S/sz=468x60A|728x90A/"
 target="_top"> </a><a
 href="http://www.burstnet.com/ads/ad1591a-map.cgi/ns/v=2.0S/sz=468x60A|728x90A/"
@@ -122,7 +122,7 @@ alt="Click Here" border="0"></a> </noscript> <!-- END BURST CODE --> </p>
         <p><!-- BEGIN RICH-MEDIA BURST! CODE --> <script language="JavaScript">
 <!--
 ShowBurstAd('sk1591a','160','600','120x600A|160x600A','0', '000000', '');
-// --></script><iframe id="BURST" src="http://www.burstnet.com/cgi-bin/ads/sk1591a.cgi/NI/if/v=1.0J/zg000000/sz=120x600A|160x600A/r=https%253A%252F%252Fweb.archive.org%252Fweb%252F20051231163328id_%252Fhttp%25253A%252F%252Fwww.theinsider.com%252Fprivacy.htm/5190/RETURN-CODE" width="160" height="600" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no"><a href="http://www.burstnet.com/ads/sk1591a-map.cgi/v=1.0J/sz=120x600A|160x600A/r=https%253A%252F%252Fweb.archive.org%252Fweb%252F20051231163328id_%252Fhttp%25253A%252F%252Fwww.theinsider.com%252Fprivacy.htm/5190" target=_top><img src="http://www.burstnet.com/cgi-bin/ads/sk1591a.cgi/v=1.0J/sz=120x600A|160x600A/r=https%253A%252F%252Fweb.archive.org%252Fweb%252F20051231163328id_%252Fhttp%25253A%252F%252Fwww.theinsider.com%252Fprivacy.htm/5190" border="0" alt="Click Here"></a></iframe> <noscript><a
+// --></script><iframe id="BURST" src="http://www.burstnet.com/cgi-bin/ads/sk1591a.cgi/NI/if/v=1.0J/zg000000/sz=120x600A|160x600A/r=https%253A%252F%252Fweb.archive.org%252Fweb%252F20060615015619id_%252Fhttp%25253A%252F%252Fwww.theinsider.com%252Fprivacy.htm/5195/RETURN-CODE" width="160" height="600" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no"><a href="http://www.burstnet.com/ads/sk1591a-map.cgi/v=1.0J/sz=120x600A|160x600A/r=https%253A%252F%252Fweb.archive.org%252Fweb%252F20060615015619id_%252Fhttp%25253A%252F%252Fwww.theinsider.com%252Fprivacy.htm/5195" target=_top><img src="http://www.burstnet.com/cgi-bin/ads/sk1591a.cgi/v=1.0J/sz=120x600A|160x600A/r=https%253A%252F%252Fweb.archive.org%252Fweb%252F20060615015619id_%252Fhttp%25253A%252F%252Fwww.theinsider.com%252Fprivacy.htm/5195" border="0" alt="Click Here"></a></iframe> <noscript><a
         href="http://www.burstnet.com/ads/sk1591a-map.cgi/ns/v=1.0J/sz=120x600A|160x600A/"
         target="_top"> </a><a
         href="http://www.burstnet.com/ads/sk1591a-map.cgi/ns/v=1.0J/sz=120x600A|160x600A/"
@@ -404,22 +404,27 @@ ShowBurstAd('sk1591a','160','600','120x600A|160x600A','0', '000000', '');
                 <div align="center"><center><table border="0" cellpadding="0" cellspacing="0" width="100%">
                     <tbody><tr>
                         <td colspan="2" width="100%"><br>
-                        <p align="center"><!-- BEGIN RICH-MEDIA BURST! CODE --> <script language="JavaScript">
-rnum=Math.round(Math.random() * 100000);
-document.write('<scr'+'ipt src="http://www.burstnet.com/cgi-bin/ads/ba1591a.cgi/v=2.0S/sz=468x60B/'+rnum+'/RETURN-CODE/JS/"></scr'+'ipt>');
-</script><script src="http://www.burstnet.com/cgi-bin/ads/ba1591a.cgi/v=2.0S/sz=468x60B/51972/RETURN-CODE/JS/"></script> <noscript><a
-                        href="http://www.burstnet.com/ads/ba1591a-map.cgi/ns/v=2.0S/sz=468x60B/"
-                        target="_top"> </a><a
-                        href="http://www.burstnet.com/ads/ba1591a-map.cgi/ns/v=2.0S/sz=468x60B/"
-                        target="_top"><img
-                        src="http://www.burstnet.com/cgi-bin/ads/ba1591a.cgi/ns/v=2.0S/sz=468x60B/"
-                        alt="Click Here" border="0"></a> </noscript> <!-- END BURST CODE --> </p>
+                        <p align="center"><script type="text/javascript"><!--
+google_ad_client = "pub-1301582900611597";
+google_ad_width = 468;
+google_ad_height = 60;
+google_ad_format = "468x60_as";
+google_ad_type = "text_image";
+google_ad_channel ="";
+google_color_border = "000000";
+google_color_bg = "F0F0F0";
+google_color_link = "0000FF";
+google_color_url = "008000";
+google_color_text = "000000";
+//--></script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script> </p>
                         <p align="center"><font color="#000000" size="1" face="Arial">Your privacy is
                         important to us. For information about
                         how we use information we collect, please
                         see our </font><a href="http://www.TheInsider.com/privacy.htm"><font color="#FF0000" size="1" face="Arial">Privacy
                         Policy</font></a><font color="#FF0000" size="1" face="Arial">. </font><font color="#000000" size="1" face="Arial"><br>
-                        Copyright 1995-2005 by </font><a href="http://www.TheInsider.com/danvic.htm"><font color="#FF0000" size="1" face="Arial">Danvic
+                        Copyright 1995-2006 by </font><a href="http://www.TheInsider.com/danvic.htm"><font color="#FF0000" size="1" face="Arial">Danvic
                         Publications, Inc.</font></a></p>
                         </td>
                     </tr>
